# pythonProject5_todolist

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy_main.yaml  push_any_except_main.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
tests/goalcategory/: test_category_create_view.py  test_category_view.py
todolist/: settings.py  urls.py
todolist/bot/: models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializer.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0002_add_goals__model.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
